# spacious_corpus

./: .gitignore  README.md  Snakefile  make.sh  setup.cfg  setup.py
scripts/: reddit_languages.py
spacious_corpus/: corpus.py  corpus_info.py  count.py  freqs.py  lang_id.py  language_info.py  nlp.py  oscar.py  run.py  storage.py  tokens.py  transliterate.py  util.py
spacious_corpus/config/: Snakefile
