[metadata]
version = 0.1.0
description = Builds a corpus from various sources
url = https://github.com/rspeer/spacious_corpus
author = Elia Robyn Speer
author_email = elia@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    spacy>=3.2
    fasttext
    datasets
    langcodes>=3.2
    pyvi
    sudachipy
    pythainlp
    ftfy
    typer

[options.entry_points]
console_scripts =
    spacious-corpus-tokenize = spacious_corpus.tokens:main
    spacious-corpus-oscar = spacious_corpus.oscar:main
    spacious-corpus-count = spacious_corpus.count:count_main
    spacious-corpus-recount = spacious_corpus.count:recount_main
    spacious-corpus-merge = spacious_corpus.freqs:merge_main

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    spacy_loggers/__init__.py
